hphp/hack/test/typecheck/attributes/class_constant_attribute.php.exp
File "class_constant_attribute.php", line 3, characters 19-38:
User-defined constants are not allowed in user attribute expressions (Parsing[1002])
